--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,16 +1,24 @@
 .header-container {
     background-color: #3d56b6;
     color: white !important;
-    border:none
 }
 
 .logo-container {
-    width: auto !important;
-    background-color: #FBC02D !important;
+    background-color: #FBC02D;
     padding: 0px 10px;
     font-size: 28px;
     color: #333333;
-    position: relative !important;
-    margin-left: 0px !important;
-    left: 0 !important;
+}
+
+.logo-container a {
+    font-size: 28px;
+    color: #333333 !important;
+}
+
+.navbar {
+    padding: 0px;
+}
+
+.navbar #navbarCollapse{
+    margin: .5rem 1rem;
 }
