--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,22 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Rambla, sans-serif;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.page-content {
+  flex: 1 0 auto;
 }
