--- a/src/components/footer-no-map/footer.no.map.css
+++ b/src/components/footer-no-map/footer.no.map.css
@@ -3,9 +3,8 @@
     color: white;
     height: 60px;
 
-    background: rgb(52, 58, 64);
-    background: linear-gradient(90deg, rgba(52, 58, 64, 1) 47%, rgba(252, 200, 0, 1) 47%, rgba(252, 200, 0, 1) 48%, rgba(239, 143, 0, 1) 48%, rgba(239, 143, 0, 1) 49%, rgba(230, 86, 0, 1) 49%, rgba(230, 86, 0, 1) 50%, rgba(128, 182, 30, 1) 50%, rgba(128, 182, 30, 1) 51%, rgba(113, 12, 128, 1) 51%, rgba(113, 12, 128, 1) 52%, rgba(0, 140, 209, 1) 52%, rgba(0, 140, 209, 1) 53%, rgba(52, 58, 64, 1) 53%);
-}
+    background: rgb(252,200,0);
+    background: linear-gradient(90deg, rgba(252,200,0,1) 0%, rgba(252,200,0,1) 1%, rgba(239,143,0,1) 1%, rgba(239,143,0,1) 2%, rgba(230,86,0,1) 2%, rgba(230,86,0,1) 3%, rgba(52,58,64,1) 3%, rgba(52,58,64,1) 97%, rgba(128,182,30,1) 97%, rgba(128,182,30,1) 98%, rgba(113,12,128,1) 98%, rgba(113,12,128,1) 99%, rgba(0,140,209,1) 99%, rgba(0,140,209,1) 100%); }
 
 .social-link-logo {
     height: 50px;
