--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,17 @@ body {
 
 .page-content {
   flex: 1 0 auto;
-  margin-top: 65px;
+  padding-top: 65px;
+}
+
+.no-padding {
+  padding: 0px !important;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.w-100 {
+  width: 100%;
 }
