--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,14 @@ body {
   padding: 0px !important;
 }
 
+.pr-0 {
+  padding-right: 0px !important;
+}
+
+.pl-0 {
+  padding-left: 0px !important;
+}
+
 .h-100 {
   height: 100%;
 }
