--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -35,3 +35,8 @@
     padding-top: 2.5px;
     padding-bottom: 2.5px;
 }
+
+.PrivateValueLabel-offset-23 {
+    text-align: center !important;
+    font-size: 10px !important;
+}
